feat: añadir animaciones complementarias con js

--- a/EnigmaChat/src/styles/main.css
+++ b/EnigmaChat/src/styles/main.css
@@ -1,4 +1,5 @@
 @import "base.css";
+@import "Animations.css";
 @import "BackgroundEffects.css";
 @import "Dashboard.css";
 @import "Header/Header.css";
