--- a/src/styles/components/Button.css
+++ b/src/styles/components/Button.css
@@ -1,4 +1,4 @@
-.btn-login {
+.btn {
 	width: 70%;
 	padding: 11px;
 	background: rgba(0, 255, 255, 0.1);
@@ -16,7 +16,7 @@
 	align-self: center;
 }
 
-.btn-login:hover {
+.btn:hover {
 	background: rgba(0, 255, 255, 0.2);
 	box-shadow: 0 0 20px var(--color-cyan);
 	transform: translateY(-2px);
