--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,6 +14,9 @@
 	--color-electric-blue: #00FFFF;
 	--color-pulsing-red: #FF0066;
 	--color-dark-blue: #05081A;
+	--color-chat-bg: rgba(5, 10, 20, 0.7);
+    --color-own-msg: rgba(0, 255, 255, 0.15);
+    --color-other-msg: rgba(15, 25, 45, 0.8);
 }
 
 * {
